start hero file

--- a/header.html
+++ b/header.html
@@ -38,12 +38,9 @@
         width: 880px;
         background-color: white;
         border-radius: 6px;
-        box-shadow: 0px 10px 15px -1px rgba(0, 0, 0, .1),
+        box-shadow: 0px 10px 15px -1px rgba(0, 0, 0, 0.1),
           -10px 10px 15px -1px rgba(0, 0, 0, 0.1),
           10px 10px 15px -1px rgba(0, 0, 0, 0.1);
-      }
-
-      .card {
       }
 
       .nav-bar {
@@ -56,15 +53,15 @@
       ul {
         display: inline-flex;
         gap: 2rem;
-	}
-	
-	.menus {
-		list-style: none;
-	}
-	
-	.menus a {
-		text-decoration: none;
-		font-size: 16px;
+      }
+
+      .menus {
+        list-style: none;
+      }
+
+      .menus a {
+        text-decoration: none;
+        font-size: 16px;
         font-weight: 900;
         color: #524c4e;
       }
