--- a/hero.html
+++ b/hero.html
@@ -1,33 +1,109 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners Homework: Hero</title>
+    <title>HTML and CSS for Complete Beginners Homework: Hero</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<style>
-			/* Write your CSS here */
-		</style>
-	</head>
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+    <style>
+      /* Global style */
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
 
-			<!-- Write your HTML here -->
+      html {
+        font-family: "Poppins", monospace;
+        font-size: 16px;
+      }
 
-			<!-- Practice area end -->
-		</section>
+      .learn {
+        background-color: #f7f8f8;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-		<section class="preview" data-content="Hero">
-			<img width="1915px" src="images/reference/hero-desktop.png" alt="Hero" />
-			<img width="704px" src="images/reference/hero-mobile.png" alt="Hero" />
-		</section>
-	</body>
+	  .container {
+		  padding: 2rem;
+		  width: 100%;
+	  }
+
+	  /* ========= Header section start ========= */
+	  .nav-bar {
+		  background-color: white;
+		  display: flex;
+		  justify-content: center;
+		  justify-content: space-between;
+		  align-items: center;
+
+	  }
+
+	  .brand-logo {
+		  width: 2rem;
+	  }
+
+	  ul {
+		  display: inline-flex;
+		  grid-gap: 2rem;
+	  }
+
+	  .menus {
+		  list-style-type: none;
+	  }
+
+	  ul li {
+        text-decoration: none;
+		list-style: none;
+        font-size: 16px;
+        /* font-weight: 900; */
+        color: #524c4e;
+      }
+
+    </style>
+  </head>
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
+
+      <div class="container">
+		  <div class="header">
+			  <nav class="nav-bar">
+				<div class="brand">
+					<a href="#"><img class= "brand-logo" src="images/hero/logo-wally.svg" alt="brand-logo-wally"></a>
+				</div>
+				<div class="menus">
+					<ul>
+						<li>Discover Wally</li>
+						<li>Pricing</li>
+						<li>About Us</li>
+						<li>Contact</li>
+					</ul>
+				</div>
+				<button>Start Now
+					<img src="images/hero/arrow-right-color.svg" alt="arrow-right-color">
+				</button>
+			  </nav>
+		  </div>
+	  </div>
+
+      <!-- Practice area end -->
+    </section>
+
+    <section class="preview" data-content="Hero">
+      <img width="1915px" src="images/reference/hero-desktop.png" alt="Hero" />
+      <img width="704px" src="images/reference/hero-mobile.png" alt="Hero" />
+    </section>
+  </body>
 </html>
