add content section

--- a/hero.html
+++ b/hero.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners Homework: Hero</title>
+    <title>HTML and CSS for Complete Beginners Homework: Hero</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<style>
-			/* Write your CSS here */
-		</style>
-	</head>
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+    <style>
+      /* Write your CSS here */
+    </style>
+  </head>
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
 
-			<!-- Write your HTML here -->
+      <section class="hero">
+        <div class="content">
+          <p class="accent">shopping made easy</p>
+          <h1>create your digital wallet in just a few clicks</h1>
+          <h2>
+            Add your cards and pay with your phone everywhere. Convenience is
+            the key
+          </h2>
+          <a class="btn" href="#"
+            >Buy it now
+            <img
+              src="images/hero/arrow-right-white.svg"
+              alt=""
+              arrow-right-white
+          /></a>
+        </div>
+        <img src="images/hero/illustration.svg" alt="illustration" />
+      </section>
 
-			<!-- Practice area end -->
-		</section>
+      <!-- Practice area end -->
+    </section>
 
-		<section class="preview" data-content="Hero">
-			<img width="1915px" src="images/reference/hero-desktop.png" alt="Hero" />
-			<img width="704px" src="images/reference/hero-mobile.png" alt="Hero" />
-		</section>
-	</body>
+    <section class="preview" data-content="Hero">
+      <img width="1915px" src="images/reference/hero-desktop.png" alt="Hero" />
+      <img width="704px" src="images/reference/hero-mobile.png" alt="Hero" />
+    </section>
+  </body>
 </html>
