--- a/hero.html
+++ b/hero.html
@@ -23,7 +23,7 @@
         padding: 0;
       }
 
-      html {
+      body {
         font-family: "Poppins", monospace;
         font-size: 16px;
       }
@@ -45,6 +45,12 @@
           10px 10px 15px -1px rgba(0, 0, 0, 0.1);
       }
 
+      a {
+        text-decoration: none;
+        color: rgb(19, 42, 59);
+        font-weight: 500;
+      }
+
       /* ========= Header section start ========= */
       .nav-bar {
         display: flex;
@@ -54,7 +60,7 @@
       }
 
       .header {
-        margin-bottom: 5rem  ;
+        margin-bottom: 5rem;
       }
 
       ul {
@@ -69,9 +75,9 @@
       ul li {
         text-decoration: none;
         list-style: none;
-        font-size: .8rem;
+        font-size: 0.8rem;
         /* font-weight: 900; */
-        color: #524c4e;
+        color: rgb(82, 76, 78);
       }
 
       .menus a {
@@ -80,39 +86,47 @@
       }
 
       .menus a:hover {
-        color: #2C86d9;
+        color: #2c86d9;
         cursor: pointer;
       }
 
       .btn {
-        padding: 12px 18px;
-        background-color: #2C86D9;
+        display: inline-block;
         color: #ffffff;
-        border-radius: 2rem;
+        background-color: #2c86d9;
+        border-radius: 100px;
+        padding: 1rem 2rem;
         display: inline-flex;
-        justify-content: center;
+        gap: 0.5rem;
         align-items: center;
-        gap: .5rem;
-        text-decoration: none;
-        cursor: pointer;
       }
 
       .outline {
         background-color: transparent;
-        color: #2C86D9;
-        border: 2px solid #2C86D9;
+        color: #2c86d9;
+        border: 2px solid #2c86d9;
       }
 
-      
-       /* ========= Header section end ========= */
+      /* ========= Header section end ========= */
 
-/* ========= hero section start ========= */
+      /* ========= hero section start ========= */
       .hero {
         display: grid;
         grid-template-columns: 1fr 1fr;
-      }      
-/* ========= Header section end ========= */
+        justify-items: center;
+        align-items: center;
+        gap: 8rem;
+      }
 
+      .hero img {
+        max-width: 100%;
+      }
+
+      h1 {
+        font-size: 3.15rem;
+        line-height: 1.33rem;
+      }
+      /* ========= Header section end ========= */
     </style>
   </head>
   <body class="flip">
@@ -156,8 +170,8 @@
               Add your cards and pay with your phone everywhere. Convenience is
               the key
             </h2>
-            <a class="btn" href="#"
-              >Buy it now
+            <a class="btn" href="#">
+              Buy it now
               <img
                 src="images/hero/arrow-right-white.svg"
                 alt=""
