--- a/hero.html
+++ b/hero.html
@@ -52,7 +52,7 @@
       }
 
       /* ========= Header section start ========= */
-      .nav-bar {
+      nav.nav-bar {
         display: flex;
         justify-content: center;
         justify-content: space-between;
@@ -156,8 +156,44 @@
       /* ========= Mobile version start ========= */
 
       @media screen and (max-width: 950px) {
-        .brand {
+        div.menus,
+        a.btn.outline {
           display: none;
+        }
+
+        div.header {
+          display: flex;
+          justify-content: center;
+          justify-content: space-between;
+          align-items: center;
+        }
+
+        .btn-mobile {
+          display: inline-block;
+        }
+
+        img.brand-logo {
+          max-width: 3rem;
+        }
+
+        .hero {
+          grid-template-columns: 1fr;
+        }
+
+        #hero-illustration {
+          order: -1;
+        }
+
+        h1 {
+          font-size: 2.5rem;
+          line-height: 1;
+          margin: 0rem 0 2rem;
+        }
+
+        h2 {
+          font-size: 1.1rem;
+          line-height: 1.2;
+          margin-bottom: 2rem;
         }
       }
 
@@ -216,7 +252,11 @@
                 arrow-right-white
             /></a>
           </div>
-          <img src="images/hero/illustration.svg" alt="illustration" />
+          <img
+            src="images/hero/illustration.svg"
+            id="hero-illustration"
+            alt="hero-illustration"
+          />
         </section>
       </div>
 
