--- a/login-form.html
+++ b/login-form.html
@@ -1,32 +1,80 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners Homework: Login form</title>
+    <title>HTML and CSS for Complete Beginners Homework: Login form</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
 
-		<style>
-			/* Write your CSS here */
-		</style>
-	</head>
-	<body>
-		<section class="learn">
-			<!-- Practice area start -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-			<!-- Write your HTML here -->
+    <style>
+      /* Write your CSS here */
+      /* ==== Global style start ==== */
 
-			<!-- Practice area end -->
-		</section>
+      * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
 
-		<section class="preview" data-content="Login form">
-			<img width="498px" src="images/reference/login-form.png" alt="Login form" />
-		</section>
-	</body>
+      body {
+        font-family: "Poppins", monospace;
+      }
+      /* ==== Global style end ==== */
+
+      /* ==== Font style start ==== */
+
+      /* ==== Font style end ==== */
+    </style>
+  </head>
+  <body>
+    <section class="learn">
+      <!-- Practice area start -->
+      <div class="card">
+        <h1>Sign in with your credentials</h1>
+        <form action="#" method="post">
+          <div>
+            <label for="login-email">EMAIL ADDRESS</label>
+            <input
+              type="text"
+              name="login-email"
+              id="login-email"
+              placeholder="chuck_norris@roundhouse.com"
+            />
+          </div>
+
+          <div>
+            <label for="login-password">PASSWORD</label>
+            <input type="password" name="login-password" id="login-password" />
+          </div>
+
+          <div>
+            <input type="checkbox" id="login-remember" name="login-remember" />
+            <label for="login-remember">REMEMBER ME</label>
+          </div>
+
+          <a href="#" class="btn">Sign In</a>
+        </form>
+      </div>
+
+      <!-- Practice area end -->
+    </section>
+
+    <section class="preview" data-content="Login form">
+      <img
+        width="498px"
+        src="images/reference/login-form.png"
+        alt="Login form"
+      />
+    </section>
+  </body>
 </html>
