--- a/login-form.html
+++ b/login-form.html
@@ -29,9 +29,105 @@
       body {
         font-family: "Poppins", monospace;
       }
+
+      .card {
+      }
+
+      .container {
+        box-sizing: border-box;
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+        background-color: white;
+        padding: 3rem;
+        /* margin: 0 auto; */
+        width: 434px;
+        height: 579px;
+        border-radius: 0.5rem;
+        box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+          0px -5px 15px -3px rgba(0, 0, 0, 0.1),
+          -10px 10px 15px -3px rgba(0, 0, 0, 0.1),
+          10px 10px 15px -3px rgba(0, 0, 0, 0.1);
+      }
+
+      .learn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      form label {
+        display: block;
+        margin-top: 2rem;
+      }
+
+      form div {
+        margin-bottom: 1rem;
+      }
+
+      form .btn {
+        text-decoration: none;
+        background-color: #7c47c0;
+        color: white;
+        padding: 1rem 2rem;
+        font-weight: 700;
+        text-align: center;
+        width: 100%;
+        border-radius: 8px;
+        max-width: 100%;
+      }
+
+      form a {
+        display: inline-block;
+      }
+
+      form #login-email,
+      form #login-password {
+        padding: 1.3rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        display: inline-block;
+        width: 100%;
+        border-radius: 0.5rem;
+        border: none;
+        background-color: rgba(243, 244, 245, 1);
+        font-size: 18px;
+        color: rgba(0 0 0 / 0.6);
+      }
+
+      form #login-email:focus,
+      form #login-password:focus {
+        outline: none;
+        background-color: rgba(214, 215, 216, 0.8);
+      }
+
+      #remember-me {
+        margin-right: 0.8rem;
+        width: 1rem;
+        height: 1rem;
+      }
+
       /* ==== Global style end ==== */
 
       /* ==== Font style start ==== */
+      h1 {
+        font-size: 2rem;
+        font-weight: 900;
+        color: #132a3b;
+        line-height: 1.3;
+        margin-bottom: 2rem;
+      }
+
+      form label {
+        font-weight: 600;
+        color: #132a3b;
+        font-size: 0.8rem;
+      }
+
+      #login-remember {
+        display: flex;
+        margin-bottom: 2rem;
+      }
 
       /* ==== Font style end ==== */
     </style>
@@ -39,31 +135,39 @@
   <body>
     <section class="learn">
       <!-- Practice area start -->
-      <div class="card">
-        <h1>Sign in with your credentials</h1>
-        <form action="#" method="post">
-          <div>
-            <label for="login-email">EMAIL ADDRESS</label>
-            <input
-              type="text"
-              name="login-email"
-              id="login-email"
-              placeholder="chuck_norris@roundhouse.com"
-            />
-          </div>
-
-          <div>
-            <label for="login-password">PASSWORD</label>
-            <input type="password" name="login-password" id="login-password" />
-          </div>
-
-          <div>
-            <input type="checkbox" id="login-remember" name="login-remember" />
-            <label for="login-remember">REMEMBER ME</label>
-          </div>
-
-          <a href="#" class="btn">Sign In</a>
-        </form>
+      <div class="container">
+        <div class="card">
+          <h1>Sign in with your credentials</h1>
+          <form action="#" method="post">
+            <div>
+              <label for="login-email">EMAIL ADDRESS</label>
+              <input
+                type="text"
+                name="login-email"
+                id="login-email"
+                placeholder="chuck_norris@roundhouse.com"
+              />
+            </div>
+            <div>
+              <label for="login-password">PASSWORD</label>
+              <input
+                type="password"
+                name="login-password"
+                id="login-password"
+              />
+            </div>
+            <div id="check-remember">
+              <label for="login-remember" id="login-remember"
+                ><input
+                  type="checkbox"
+                  id="remember-me"
+                  name="remember-me"
+                />REMEMBER ME</label
+              >
+            </div>
+            <a href="#" class="btn">Sign In</a>
+          </form>
+        </div>
       </div>
 
       <!-- Practice area end -->
