Finish login-form

--- a/login-form.html
+++ b/login-form.html
@@ -101,10 +101,10 @@
         background-color: rgba(214, 215, 216, 0.8);
       }
 
-      #remember-me {
+      input#remember-me {
         margin-right: 0.8rem;
-        width: 1rem;
-        height: 1rem;
+        width: 1.2rem;
+        height: 1.2rem;
       }
 
       /* ==== Global style end ==== */
