learn grid and responsive grid

--- a/coltsteel/Bootstrap/index.html
+++ b/coltsteel/Bootstrap/index.html
@@ -66,6 +66,22 @@
           pembungkus isi yang sudah dibuat template dengan nama alert
         </p>
       </div>
+
+      <h2 class="display2">Responsive Grid</h2>
+      <div class="row">
+        <div class="bg-primary col-md-6">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est unde nam
+          repellendus natus commodi! Esse nesciunt magni magnam! Numquam, quia!
+          Cupiditate voluptates pariatur distinctio. Impedit eum sed reiciendis
+          odit exercitationem.
+        </div>
+        <div class="bg-success col-md-6">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, est,
+          quam ex distinctio optio quia dolorum provident deleniti nesciunt
+          necessitatibus atque mollitia praesentium laboriosam quos dignissimos,
+          tempore maiores amet nisi.
+        </div>
+      </div>
     </div>
 
     <script
