--- a/coltsteel/MuseumOfCandy/index.html
+++ b/coltsteel/MuseumOfCandy/index.html
@@ -58,11 +58,14 @@
       </div>
     </nav>
 
-    <!-- content -->
+    <!-- header -->
     <section class="container-fluid px-0">
       <div class="row align-items-center mx-0">
         <div class="col-lg-6 px-0">
-          <div id="headingGroup" class="text-center text-white d-none d-lg-block">
+          <div
+            id="headingGroup"
+            class="text-center text-white d-none d-lg-block"
+          >
             <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
             <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
             <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
@@ -74,6 +77,58 @@
         </div>
         <div class="col-lg-6 px-0">
           <img class="img-fluid" src="imgs/hand2.png" alt="hand" />
+        </div>
+      </div>
+    </section>
+
+    <!-- content -->
+    <section class="container-fluid px-0 content">
+      <div class="row align-items-center mx-0">
+        <div class="col-lg-6 px-0 order-2 order-md-1">
+          <img class="img-fluid" src="imgs/milk.png" alt="milk photo" />
+        </div>
+        <div class="col-lg-6 px-0 text-center order-1 order-md-2">
+          <div class="row justify-content-center mx-0">
+            <div class="col-md-10 col-lg-8 blurb">
+              <h2 class="">MUSEUM OF CANDY</h2>
+              <img
+                class="d-none d-lg-inline"
+                src="imgs/lolli_icon.png"
+                alt=""
+              />
+              <p class="lead">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Blanditiis facilis sint, quos libero nihil omnis reiciendis
+                repellendus voluptate! Rerum numquam molestiae voluptas at
+                dignissimos quidem recusandae ea cupiditate sequi sed?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid px-0 content">
+      <div class="row align-items-center mx-0">
+        <div class="col-lg-6 px-0 order-1 order-md-2">
+          <img class="img-fluid" src="imgs/milk.png" alt="milk photo" />
+        </div>
+        <div class="col-lg-6 px-0 text-center order-2 order-md-1">
+          <div class="row justify-content-center mx-0">
+            <div class="col-md-10 col-lg-8 blurb">
+              <h2 class="">MUSEUM OF CANDY</h2>
+              <img
+                class="d-none d-lg-inline"
+                src="imgs/lolli_icon.png"
+                alt=""
+              />
+              <p class="lead">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Blanditiis facilis sint, quos libero nihil omnis reiciendis
+                repellendus voluptate! Rerum numquam molestiae voluptas at
+                dignissimos quidem recusandae ea cupiditate sequi sed?
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
