--- a/coltsteel/MuseumOfCandy/index.html
+++ b/coltsteel/MuseumOfCandy/index.html
@@ -1,154 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
-      rel="stylesheet"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="app.css" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
 
-    <title>Museum of Candy</title>
-  </head>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="app.css" />
 
-  <body>
-    <!-- NavBar -->
-    <nav
-      id="mainNavbar"
-      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
-    >
-      <a href="#" class="navbar-brand">CANDY</a>
-      <button
-        class="navbar-toggler"
-        data-toggle="collapse"
-        data-target="#navLinks"
-        aria-label="Toggle Navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navLinks">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="#" class="nav-link">HOME</a>
-          </li>
-          <li>
-            <a href="#" class="nav-link">ABOUT</a>
-          </li>
-          <li>
-            <a href="#" class="nav-link">TICKETS</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <title>Museum of Candy</title>
+</head>
 
-    <!-- header -->
-    <section class="container-fluid px-0">
-      <div class="row align-items-center mx-0">
-        <div class="col-lg-6 px-0">
-          <div
-            id="headingGroup"
-            class="text-center text-white d-none d-lg-block"
-          >
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          </div>
-        </div>
-        <div class="col-lg-6 px-0">
-          <img class="img-fluid" src="imgs/hand2.png" alt="hand" />
+<body>
+  <!-- NavBar -->
+  <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+    <a href="#" class="navbar-brand">CANDY</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navLinks">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="nav-link">HOME</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">ABOUT</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">TICKETS</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- header -->
+  <section class="container-fluid px-0">
+    <div class="row align-items-center mx-0">
+      <div class="col-lg-6 px-0">
+        <div id="headingGroup" class="text-center text-white d-none d-lg-block">
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
         </div>
       </div>
-    </section>
+      <div class="col-lg-6 px-0">
+        <img class="img-fluid" src="imgs/hand2.png" alt="hand" />
+      </div>
+    </div>
+  </section>
 
-    <!-- content -->
-    <section class="container-fluid px-0 content">
-      <div class="row align-items-center mx-0">
-        <div class="col-lg-6 px-0 order-2 order-md-1">
-          <img class="img-fluid" src="imgs/milk.png" alt="milk photo" />
-        </div>
-        <div class="col-lg-6 px-0 text-center order-1 order-md-2">
-          <div class="row justify-content-center mx-0">
-            <div class="col-md-10 col-lg-8 blurb">
-              <h2 class="">MUSEUM OF CANDY</h2>
-              <img
-                class="d-none d-lg-inline"
-                src="imgs/lolli_icon.png"
-                alt=""
-              />
-              <p class="lead">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Blanditiis facilis sint, quos libero nihil omnis reiciendis
-                repellendus voluptate! Rerum numquam molestiae voluptas at
-                dignissimos quidem recusandae ea cupiditate sequi sed?
-              </p>
-            </div>
+  <!-- first content -->
+  <section class="container-fluid px-0 content">
+    <div class="row align-items-center mx-0">
+      <div class="col-lg-6 px-0 order-2 order-lg-1">
+        <img class="img-fluid" src="imgs/milk.png" alt="milk photo" />
+      </div>
+      <div class="col-lg-6 px-0 text-center order-1 order-lg-2">
+        <div class="row justify-content-center mx-0">
+          <div class="col-md-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2 class="">MUSEUM OF CANDY</h2>
+            <img class="d-none d-lg-inline" src="imgs/lolli_icon.png" alt="" />
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Blanditiis facilis sint, quos libero nihil omnis reiciendis
+              repellendus voluptate! Rerum numquam molestiae voluptas at
+              dignissimos quidem recusandae ea cupiditate sequi sed?
+            </p>
           </div>
         </div>
       </div>
-    </section>
-    <section class="container-fluid px-0 content">
-      <div class="row align-items-center mx-0">
-        <div class="col-lg-6 px-0 order-1 order-md-2">
-          <img class="img-fluid" src="imgs/milk.png" alt="milk photo" />
-        </div>
-        <div class="col-lg-6 px-0 text-center order-2 order-md-1">
-          <div class="row justify-content-center mx-0">
-            <div class="col-md-10 col-lg-8 blurb">
-              <h2 class="">MUSEUM OF CANDY</h2>
-              <img
-                class="d-none d-lg-inline"
-                src="imgs/lolli_icon.png"
-                alt=""
-              />
-              <p class="lead">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Blanditiis facilis sint, quos libero nihil omnis reiciendis
-                repellendus voluptate! Rerum numquam molestiae voluptas at
-                dignissimos quidem recusandae ea cupiditate sequi sed?
-              </p>
-            </div>
+    </div>
+  </section>
+
+  <!-- second content -->
+  <section class="container-fluid px-0 content">
+    <div class="row align-items-center mx-0">
+      <div class="col-lg-6 px-0 text-center">
+        <div class="row justify-content-center mx-0">
+          <div class="col-md-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2 class="">MUSEUM OF CANDY</h2>
+            <img class="d-none d-lg-inline" src="imgs/lolli_icon.png" alt="" />
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Blanditiis facilis sint, quos libero nihil omnis reiciendis
+              repellendus voluptate! Rerum numquam molestiae voluptas at
+              dignissimos quidem recusandae ea cupiditate sequi sed?
+            </p>
           </div>
         </div>
       </div>
-    </section>
+      <div class="col-lg-6 px-0">
+        <img class="img-fluid" src="imgs/gumball.png" alt="milk photo" />
+      </div>
+    </div>
+  </section>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- third content -->
+  <section class="container-fluid px-0 content">
+    <div class="row align-items-center mx-0">
+      <div class="col-lg-6 px-0 order-2 order-lg-1">
+        <img class="img-fluid" src="imgs/sprinkles.png" alt="milk photo" />
+      </div>
+      <div class="col-lg-6 px-0 text-center order-1 order-lg-2">
+        <div class="row justify-content-center mx-0">
+          <div class="col-md-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2 class="">MUSEUM OF CANDY</h2>
+            <img class="d-none d-lg-inline" src="imgs/lolli_icon.png" alt="" />
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Blanditiis facilis sint, quos libero nihil omnis reiciendis
+              repellendus voluptate! Rerum numquam molestiae voluptas at
+              dignissimos quidem recusandae ea cupiditate sequi sed?
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+
+  <script>
+    $(function () {
+      $(document).scroll(function () {
+        var $nav = $("#mainNavbar");
+        $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+      })
+    })
+  </script>
+</body>
+
 </html>
